# fpcap-benchmark

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  run_benchmark.py
benchmarks/2026-02-08/: benchmark_results.json  benchmark_results_10gb.json
src/: main.cpp  packet_reading.cpp
tracefiles/: example.pcapng  example.pcapng.zst
